--- a/index.html
+++ b/index.html
@@ -70,7 +70,17 @@
     .review-text{font-style:italic;color:var(--text-muted);margin-bottom:.5rem}
     .review-img{width:100%;height:200px;object-fit:cover;border-radius:.5rem;margin-top:.5rem}
     .badge{background:rgba(56,189,248,.1);color:var(--accent);padding:.125rem .5rem;border-radius:4px;font-size:.75rem;font-weight:500}
-  </style>
+/* add into existing <style> in index.html */
+.map-container, #map {
+  touch-action: pan-x pan-y;
+  -ms-touch-action: pan-x pan-y;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+/* ensure sidebar is above leaflet panes on small screens */
+.sidebar-wrapper { z-index: 9999; }
+.sidebar { max-width: 90vw; }  </style>
 </head>
 
 <body>
